# happyview-plugins

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
plugins/gog/: Cargo.toml
plugins/gog/src/: lib.rs
plugins/itch/: .releaserc.json  Cargo.toml  manifest.json  package.json
plugins/itch/src/: lib.rs
plugins/microsoft/: .releaserc.json  Cargo.toml  manifest.json  package.json
plugins/microsoft/src/: lib.rs
plugins/playstation/: Cargo.toml
plugins/playstation/src/: lib.rs
plugins/steam/: .releaserc.json  Cargo.toml  manifest.json
plugins/steam/src/: lib.rs
plugins/xbox/: .releaserc.json  Cargo.toml  manifest.json  package.json
plugins/xbox/src/: lib.rs
