[workspace]
resolver = "2"
members = [
    "plugins/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/gamesgamesgamesgamesgames/happyview-plugins"

[workspace.dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
